--- a/index.html
+++ b/index.html
@@ -25,20 +25,20 @@
     </header>
 
     <main>
-      <div class="sec1">
-        <div class="htext">
-          <h1 class="hmain">This website is awesome</h1>
-          <p class="hsec">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed luctus suscipit felis vitae pretium. In in volutpat
-            tellus. Sed id nulla enim. Integer scelerisque porta mi, vel luctus diam maximus ut. Donec leo lacus, blandit et
-            vehicula accumsan, aliquet sit amet arcu. Integer dictum aliquet nibh,
-          </p>
-          <a class="btn" href="">Sign up</a>
-        </div>
-        <div>
-          <img src="./images/img1.jpg" alt="Hertzoggies" class="head-img" />
-        </div>
-      </div>
+      <section class="sec1">
+      <aside class="htext">
+        <h1 class="hmain">This website is awesome</h1>
+        <p class="hsec">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed luctus suscipit felis vitae pretium.
+          In in volutpat tellus. Sed id nulla enim. Integer scelerisque porta mi, vel luctus diam maximus ut.
+          Donec leo lacus, blandit et vehicula accumsan, aliquet sit amet arcu. Integer dictum aliquet nibh,
+        </p>
+        <a class="btn" href="">Sign up</a>
+      </aside>
+      <picture>
+        <img src="./images/img1.jpg" alt="Hertzoggies" class="img">
+      </picture>
+    </section>
       <section class="randominfo">
         <h1 class="random-info">Some Random Information.</h1>
 
