--- a/pages/about.html
+++ b/pages/about.html
@@ -22,29 +22,29 @@
           <a href="https://github.com/arsmohamed/kreativestorm-tasks" target="_blank">Contact Us</a>
         </div>
       </nav>
-      <div class="sec1">
-        <div class="htext">
-          <h1 class="hmain">About us</h1>
-          <p class="hsec">
-            Welcome to Africulinary Delights, your ultimate destination for authentic African pastries crafted with passion and
-            expertise. We take immense pride in curating a delectable assortment of pastries, working hand-in-hand with the
-            world's top chefs who infuse their culinary mastery into each creation. Our commitment to quality and tradition
-            ensures that every bite encapsulates the rich flavors and cultural essence of Africa.
-          </p>
-        </div>
-        <div>
-          <img src="../images/team1.jpg" alt="Three chefs standing in a kitchen" class="head-img" />
-        </div>
-      </div>
     </header>
     <main>
+      <section class="sec1">
+        <aside class="htext">
+          <h1 class="hmain">This website is awesome</h1>
+          <p class="hsec">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed luctus suscipit felis vitae pretium.
+            In in volutpat tellus. Sed id nulla enim. Integer scelerisque porta mi, vel luctus diam maximus ut.
+            Donec leo lacus, blandit et vehicula accumsan, aliquet sit amet arcu. Integer dictum aliquet nibh,
+          </p>
+          <a class="btn" href="">Sign up</a>
+        </aside>
+        <picture>
+          <img src="../images/img1.jpg" alt="Hertzoggies" class="img">
+        </picture>
+      </section>
       <h2 class="main-header">Our Team</h2>
-      <div class="abt">
+      <section class="abt">
         <h3 class="team-name">Zara Nkosi</h3>
-        <div>
+        <picture>
           <img src="../images/team2.jpg" alt="chef holding a pastry in the kitchen" />
-        </div>
-        <div class="abt-text">
+        </picture>
+        <aside class="abt-text">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean luctus interdum lectus. Morbi interdum, urna nec
             consectetur elementum, nulla sem suscipit tortor, eu congue neque nulla hendrerit elit. Nullam nec massa lobortis,
@@ -52,14 +52,14 @@
             facilisis aliquet mollis. Sed convallis ante enim, in laoreet quam dictum sed. Integer at porta nibh, non finibus
             eros. Quisque cursus ac est ut rutrum. Vestibulum non malesuada mi, sit amet sagittis mi.
           </p>
-        </div>
-      </div>
-      <div class="abt">
+        </aside>
+      </section>
+      <section class="abt">
         <h3 class="team-name">Jabari Chibueze</h3>
-        <div>
+        <picture>
           <img src="../images/team3.jpg" alt="chef holding a pastry in the kitchen" />
-        </div>
-        <div class="abt-text">
+        </picture>
+        <aside class="abt-text">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean luctus interdum lectus. Morbi interdum, urna nec
             consectetur elementum, nulla sem suscipit tortor, eu congue neque nulla hendrerit elit. Nullam nec massa lobortis,
@@ -67,14 +67,14 @@
             facilisis aliquet mollis. Sed convallis ante enim, in laoreet quam dictum sed. Integer at porta nibh, non finibus
             eros. Quisque cursus ac est ut rutrum. Vestibulum non malesuada mi, sit amet sagittis mi.
           </p>
-        </div>
-      </div>
-      <div class="abt">
+        </aside>
+      </section>
+      <section class="abt">
         <h3 class="team-name">Kwame Osei</h3>
-        <div>
+        <picture>
           <img src="../images/team4.jpg" alt="chef holding a pastry in the kitchen" />
-        </div>
-        <div class="abt-text">
+        </picture>
+        <aside class="abt-text">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean luctus interdum lectus. Morbi interdum, urna nec
             consectetur elementum, nulla sem suscipit tortor, eu congue neque nulla hendrerit elit. Nullam nec massa lobortis,
@@ -82,8 +82,8 @@
             facilisis aliquet mollis. Sed convallis ante enim, in laoreet quam dictum sed. Integer at porta nibh, non finibus
             eros. Quisque cursus ac est ut rutrum. Vestibulum non malesuada mi, sit amet sagittis mi.
           </p>
-        </div>
-      </div>
+        </aside>
+      </section>
     </main>
     <footer>
       <a href="#coDet">
