--- a/pages/products.html
+++ b/pages/products.html
@@ -6,7 +6,7 @@
     <title>Products</title>
     <link rel="stylesheet" href="../style.css" />
   </head>
-  <body> 
+  <body>
     <header>
       <nav>
         <div id="coDet">
@@ -24,82 +24,71 @@
       </nav>
     </header>
     <main>
-      <div class="title"><h1>Pastry Shop</h1></div>
+      <div class="shoponline"><h1>Shop Online</h1></div>
 
-      <div class="image-grid-container">
+      <section class="image-grid-container">
         <!-- First row -->
-        <div class="image-grid-item">
-          <p>Title</p>
-          <img src="../images/1.Kunafah.jpg" alt="Image 1" />
-          <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
-        </div>
-        <div class="image-grid-item">
-          <p>Title</p>
-          <img src="../images/pastry_6.jpg" alt="Image 1" />
-          <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
-        </div>
-        <div class="image-grid-item">
-          <p>Title</p>
-          <img src="../images/pastry_8.jpg" alt="Image 1" />
-          <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
-        </div>
-        <div class="image-grid-item">
-          <p>Title</p>
-          <img src="../images/5.kaab_el_ghazal.jpg" alt="Image 1" />
-          <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
-        </div>
+        <figure class="image-grid-item">
+          <img src="../images/4.jpg" alt="Image4" />
+          <figcaption>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></figcaption>
+        </figure>
+        <figure class="image-grid-item">
+          <img src="../images/3.jpg" alt="Image3" />
+          <figcaption>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></figcaption>
+        </figure>
+        <figure class="image-grid-item">
+          <img src="../images/2.jpg" alt="Image2" />
+          <figcaption>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></figcaption>
+        </figure>
+        <figure class="image-grid-item">
+          <img src="../images/1.jpg" alt="Image1" />
+          <figcaption>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></figcaption>
+        </figure>
 
         <!-- Second row -->
-        <div class="image-grid-item">
-          <p>Title</p>
-          <img src="../images/pastry_1.jpg" alt="Image 1" />
-          <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
-        </div>
-        <div class="image-grid-item">
-          <p>Title</p>
-          <img src="../images/pastry_4.jpg" alt="Image 1" />
-          <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
-        </div>
-        <div class="image-grid-item">
-          <p>Title</p>
-          <img src="../images/pastry_3.jpg" alt="Image 1" />
-          <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
-        </div>
-        <div class="image-grid-item">
-          <p>Title</p>
-          <img src="../images/1.Kunafah.jpg" alt="Image 1" />
-          <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
-        </div>
+        <figure class="image-grid-item">
+          <img src="../images/1.jpg" alt="Image 1" />
+          <figcaption>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></figcaption>
+        </figure>
+        <figure class="image-grid-item">
+          <img src="../images/2.jpg" alt="Image 1" />
+          <figcaption>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></figcaption>
+        </figure>
+        <figure class="image-grid-item">
+          <img src="../images/3.jpg" alt="Image 1" />
+          <figcaption>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></figcaption>
+        </figure>
+        <figure class="image-grid-item">
+          <img src="../images/4.jpg" alt="Image 1" />
+          <figcaption>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></figcaption>
+        </figure>
 
         <!-- Third row -->
-        <div class="image-grid-item">
-          <p>Title</p>
-          <img src="../images/pastry_7.jpg" alt="Image 1" />
-          <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
-        </div>
-        <div class="image-grid-item">
-          <p>Title</p>
-          <img src="../images/1.Kunafah.jpg" alt="Image 1" />
-          <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
-        </div>
-        <div class="image-grid-item">
-          <p>Title</p>
-          <img src="../images/pastry_8.jpg" alt="Image 1" />
-          <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
-        </div>
-        <div class="image-grid-item">
-          <p>Title</p>
-          <img src="../images/pastry_9.jpg" alt="Image 1" />
-          <p>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></p>
-        </div>
-      </div>
+        <figure class="image-grid-item">
+          <img src="../images/4.jpg" alt="Image4" />
+          <figcaption>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></figcaption>
+        </figure>
+        <figure class="image-grid-item">
+          <img src="../images/3.jpg" alt="Image3" />
+          <figcaption>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></figcaption>
+        </figure>
+        <figure class="image-grid-item">
+          <img src="../images/2.jpg" alt="Image2" />
+          <figcaption>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></figcaption>
+        </figure>
+        <figure class="image-grid-item">
+          <img src="../images/1.jpg" alt="Image1" />
+          <figcaption>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></figcaption>
+        </figure>
+      </section>
     </main>
     <footer>
       <a href="#coDet">
         <em>Back to Top</em>
       </a>
       <p>Authors: <em> Amr R. Mohamed | Ashish Augustine | Jo Daniels | Ruslan Rezunenko | Yousef Raafat</em></p>
-      <p>To view the full project, click 
+      <p>
+        To view the full project, click
         <a href="https://github.com/arsmohamed/kreativestorm-tasks" target="_blank">
           <em>here</em>
         </a>
