--- a/pages/products.html
+++ b/pages/products.html
@@ -24,9 +24,9 @@
       </nav>
     </header>
     <main>
-      <div class="title"><h1>Shop Online</h1></div>
+      <div class="shoponline"><h1>Shop Online</h1></div>
 
-      <div class="image-grid-container">
+      <section class="image-grid-container">
         <!-- First row -->
         <figure class="image-grid-item">
           <img src="../images/4.jpg" alt="Image4" />
@@ -80,7 +80,7 @@
           <img src="../images/1.jpg" alt="Image1" />
           <figcaption>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></figcaption>
         </figure>
-      </div>
+      </section>
     </main>
     <footer>
       <a href="#coDet">
