--- a/pages/products.html
+++ b/pages/products.html
@@ -30,15 +30,24 @@
         <!-- First row -->
         <figure class="image-grid-item">
           <img src="../images/4.jpg" alt="Image4" />
-          <figcaption>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></figcaption>
+          <figcaption>
+            Description lorem ipsum dolor sit amet
+            <button class="buy">Buy</button>
+          </figcaption>
         </figure>
         <figure class="image-grid-item">
           <img src="../images/3.jpg" alt="Image3" />
-          <figcaption>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></figcaption>
+          <figcaption>
+            Description lorem ipsum dolor sit amet
+            <button class="buy">Buy</button>
+          </figcaption>
         </figure>
         <figure class="image-grid-item">
           <img src="../images/2.jpg" alt="Image2" />
-          <figcaption>Description lorem ipsum dolor sit amet <button class="buy">Buy</button></figcaption>
+          <figcaption>
+            Description lorem ipsum dolor sit amet
+            <button class="buy">Buy</button>
+          </figcaption>
         </figure>
         <figure class="image-grid-item">
           <img src="../images/1.jpg" alt="Image1" />
