--- a/pages/blog.html
+++ b/pages/blog.html
@@ -33,38 +33,16 @@
       </nav>
     </header>
     <main id="blogPg">
-      <section class="sec1">
-        <h1 class="hmain">
+      <section class="sec0">
+        <h1>
           A Bite of Africa :
           <em>A Pastry Blog</em>
         </h1>
-        <p class="hsec">
-          Cupcake ipsum dolor sit amet chocolate bar. Jelly-o I love I love
-          tiramisu carrot cake cake cake. Cheesecake I love candy fruitcake
-          apple pie. Candy canes oat cake cheesecake biscuit I love donut
-          chocolate cake sweet roll jelly-o. Lemon drops jujubes. Lemon drops
-          jujubes
-        </p>
-        <picture>
-          <img
-            src="../images/pastry_6.jpg"
-            alt="cinnamon swirls on a wooden board "
-            class="img"
-          />
-        </picture>
       </section>
       <section class="sec2">
         <div>
           <h2>Everyone wants A Bite of Africa</h2>
-          <blockquote class="quote">
-            "Cookie cupcake tootsie roll tart jujubes dragée. Chocolate cake
-            gingerbread I love oat cake danish caramels gummi bears bear claw
-            jelly. Marshmallow sweet roll apple pie I love cotton candy sugar
-            plum icing chocolate."
-            <cite>
-              <p><em>A.Person</em></p>
-            </cite>
-          </blockquote>
+          
           <p>
             Pie shortbread tart apple pie biscuit apple pie carrot cake pie
             soufflé. Chocolate soufflé brownie cheesecake chupa chups bonbon
@@ -73,19 +51,26 @@
             liquorice gingerbread jujubes cookie halvah sweet roll. Dragée
             gummies cake candy canes chupa chups topping biscuit caramels. Lemon
             drops jujubes caramels cheesecake pie danish. Toffee powder
-            fruitcake gummies marzipan cupcake caramels. Dessert sugar plum
+            fruitcake gummies marzipan cupcake caramels. Dessert sugar plum</p>
+            <br>
+            <blockquote class="quote">
+            "Cookie cupcake tootsie roll tart jujubes dragée. Chocolate cake
+            gingerbread I love oat cake danish caramels gummi bears bear claw
+            jelly."
+            <cite>
+              <p><em>A.Person</em></p>
+            </cite>
+          </blockquote>
+          <br>
+          <p>
             tootsie roll candy icing pudding. Ice cream dessert caramels dragée
             carrot cake fruitcake cotton candy donut cotton candy. Caramels
             marshmallow marzipan chocolate tootsie roll chupa chups chocolate
             cake. Sugar plum powder dragée donut. Brownie chocolate apple pie
             lemon drops I love ice cream I love gummi bears marzipan. Jujubes
-            apple pie soufflé croissant dessert chupa chups. Croissant toffee
-            candy oat cake powder tootsie roll I love caramels. Candy ice cream
-            lemon drops I love cheesecake chocolate bar wafer I love fruitcake.
+            apple pie soufflé croissant dessert chupa chups. 
             Ice cream chupa chups candy chocolate cake candy canes I love.
-            Pastry cookie cheesecake tart bear claw. Tiramisu gingerbread ice
-            cream dragée sweet roll cake. Sweet cookie chupa chups chupa chups
-            soufflé. Gummies pudding candy gummi bears cake I love icing. Ice
+            Pastry cookie cheesecake tart bear claw.  Ice
             cream dessert caramels dragée carrot cake fruitcake cotton candy
             donut cotton candy. Caramels marshmallow marzipan chocolate tootsie
             roll chupa chups chocolate cake. Sugar plum powder dragée donut.
@@ -120,7 +105,10 @@
             snaps cookie. Carrot cake tart jelly cheesecake marzipan topping
             marshmallow bear claw carrot cake. Marzipan gummi bears oat cake
             candy canes caramels pie muffin dessert pastry. Chupa chups powder
-            candy toffee icing dessert cupcake candy muffin. Biscuit jujubes
+            candy toffee icing dessert cupcake candy muffin. I love gummi bears marzipan. Jujubes
+            apple pie soufflé croissant dessert chupa chups. Croissant toffee
+            candy oat cake powder tootsie roll I love caramels. Candy ice cream
+            lemon drops I love cheesecake chocolate bar wafer I love fruitcake.Biscuit jujubes
             sesame snaps dessert chocolate muffin. Croissant bonbon tiramisu
             chupa chups donut gummies liquorice croissant pudding.
           </p>
@@ -159,7 +147,10 @@
             halvah sweet chocolate gummies sugar plum cheesecake. Wafer ice
             cream gingerbread pie shortbread brownie chupa chups chupa chups
             croissant. Soufflé jujubes chocolate topping candy canes sweet
-            cheesecake candy canes. Biscuit jelly beans dragée dragée pastry
+            cheesecake candy canes. I love gummi bears marzipan. Jujubes
+            apple pie soufflé croissant dessert chupa chups. Croissant toffee
+            candy oat cake powder tootsie roll I love caramels. Candy ice cream
+            lemon drops I love cheesecake chocolate bar wafer I love fruitcake.Biscuit jelly beans dragée dragée pastry
             sweet roll. Croissant fruitcake icing danish oat cake lollipop
             chocolate bar I love. Soufflé danish wafer liquorice croissant
             jujubes.
@@ -192,6 +183,10 @@
             soufflé fruitcake. Marshmallow jelly jujubes cake cake. Tart
             marshmallow donut tart jelly beans. Dessert marzipan chocolate cake
             cookie tart.
+            I love gummi bears marzipan. Jujubes
+            apple pie soufflé croissant dessert chupa chups. Croissant toffee
+            candy oat cake powder tootsie roll I love caramels. Candy ice cream
+            lemon drops I love cheesecake chocolate bar wafer I love fruitcake.
           </p>
         </div>
         <br />
