--- a/pages/blog.html
+++ b/pages/blog.html
@@ -42,7 +42,6 @@
       <section class="sec2">
         <div>
           <h2>Everyone wants A Bite of Africa</h2>
-          
           <p>
             Pie shortbread tart apple pie biscuit apple pie carrot cake pie
             soufflé. Chocolate soufflé brownie cheesecake chupa chups bonbon
@@ -51,9 +50,10 @@
             liquorice gingerbread jujubes cookie halvah sweet roll. Dragée
             gummies cake candy canes chupa chups topping biscuit caramels. Lemon
             drops jujubes caramels cheesecake pie danish. Toffee powder
-            fruitcake gummies marzipan cupcake caramels. Dessert sugar plum</p>
-            <br>
-            <blockquote class="quote">
+            fruitcake gummies marzipan cupcake caramels. Dessert sugar plum
+          </p>
+          <br />
+          <blockquote class="quote">
             "Cookie cupcake tootsie roll tart jujubes dragée. Chocolate cake
             gingerbread I love oat cake danish caramels gummi bears bear claw
             jelly."
@@ -61,26 +61,26 @@
               <p><em>A.Person</em></p>
             </cite>
           </blockquote>
-          <br>
+          <br />
           <p>
             tootsie roll candy icing pudding. Ice cream dessert caramels dragée
             carrot cake fruitcake cotton candy donut cotton candy. Caramels
             marshmallow marzipan chocolate tootsie roll chupa chups chocolate
             cake. Sugar plum powder dragée donut. Brownie chocolate apple pie
             lemon drops I love ice cream I love gummi bears marzipan. Jujubes
-            apple pie soufflé croissant dessert chupa chups. 
-            Ice cream chupa chups candy chocolate cake candy canes I love.
-            Pastry cookie cheesecake tart bear claw.  Ice
-            cream dessert caramels dragée carrot cake fruitcake cotton candy
-            donut cotton candy. Caramels marshmallow marzipan chocolate tootsie
-            roll chupa chups chocolate cake. Sugar plum powder dragée donut.
-            Brownie chocolate apple pie lemon drops I love ice cream I love
-            gummi bears marzipan. Jujubes apple pie soufflé croissant dessert
-            chupa chups. Croissant toffee candy oat cake powder tootsie roll I
-            love caramels. Candy ice cream lemon drops I love cheesecake
-            chocolate bar wafer I love fruitcake. Ice cream chupa chups candy
-            chocolate cake candy canes I love. Pastry cookie cheesecake tart
-            bear claw. Tiramisu gingerbread ice cream dragée sweet roll cake.
+            apple pie soufflé croissant dessert chupa chups. Ice cream chupa
+            chups candy chocolate cake candy canes I love. Pastry cookie
+            cheesecake tart bear claw. Ice cream dessert caramels dragée carrot
+            cake fruitcake cotton candy donut cotton candy. Caramels marshmallow
+            marzipan chocolate tootsie roll chupa chups chocolate cake. Sugar
+            plum powder dragée donut. Brownie chocolate apple pie lemon drops I
+            love ice cream I love gummi bears marzipan. Jujubes apple pie
+            soufflé croissant dessert chupa chups. Croissant toffee candy oat
+            cake powder tootsie roll I love caramels. Candy ice cream lemon
+            drops I love cheesecake chocolate bar wafer I love fruitcake. Ice
+            cream chupa chups candy chocolate cake candy canes I love. Pastry
+            cookie cheesecake tart bear claw. Tiramisu gingerbread ice cream
+            dragée sweet roll cake.
           </p>
           <p>
             Tiramisu chocolate shortbread chocolate danish powder croissant.
@@ -105,12 +105,13 @@
             snaps cookie. Carrot cake tart jelly cheesecake marzipan topping
             marshmallow bear claw carrot cake. Marzipan gummi bears oat cake
             candy canes caramels pie muffin dessert pastry. Chupa chups powder
-            candy toffee icing dessert cupcake candy muffin. I love gummi bears marzipan. Jujubes
-            apple pie soufflé croissant dessert chupa chups. Croissant toffee
-            candy oat cake powder tootsie roll I love caramels. Candy ice cream
-            lemon drops I love cheesecake chocolate bar wafer I love fruitcake.Biscuit jujubes
-            sesame snaps dessert chocolate muffin. Croissant bonbon tiramisu
-            chupa chups donut gummies liquorice croissant pudding.
+            candy toffee icing dessert cupcake candy muffin. I love gummi bears
+            marzipan. Jujubes apple pie soufflé croissant dessert chupa chups.
+            Croissant toffee candy oat cake powder tootsie roll I love caramels.
+            Candy ice cream lemon drops I love cheesecake chocolate bar wafer I
+            love fruitcake.Biscuit jujubes sesame snaps dessert chocolate
+            muffin. Croissant bonbon tiramisu chupa chups donut gummies
+            liquorice croissant pudding.
           </p>
         </div>
         <br />
@@ -147,13 +148,13 @@
             halvah sweet chocolate gummies sugar plum cheesecake. Wafer ice
             cream gingerbread pie shortbread brownie chupa chups chupa chups
             croissant. Soufflé jujubes chocolate topping candy canes sweet
-            cheesecake candy canes. I love gummi bears marzipan. Jujubes
-            apple pie soufflé croissant dessert chupa chups. Croissant toffee
-            candy oat cake powder tootsie roll I love caramels. Candy ice cream
-            lemon drops I love cheesecake chocolate bar wafer I love fruitcake.Biscuit jelly beans dragée dragée pastry
-            sweet roll. Croissant fruitcake icing danish oat cake lollipop
-            chocolate bar I love. Soufflé danish wafer liquorice croissant
-            jujubes.
+            cheesecake candy canes. I love gummi bears marzipan. Jujubes apple
+            pie soufflé croissant dessert chupa chups. Croissant toffee candy
+            oat cake powder tootsie roll I love caramels. Candy ice cream lemon
+            drops I love cheesecake chocolate bar wafer I love fruitcake.Biscuit
+            jelly beans dragée dragée pastry sweet roll. Croissant fruitcake
+            icing danish oat cake lollipop chocolate bar I love. Soufflé danish
+            wafer liquorice croissant jujubes.
           </p>
           <p>
             Halvah chocolate toffee oat cake soufflé chocolate bar. Chocolate
@@ -182,11 +183,10 @@
             beans gummi bears chocolate cake powder marzipan gingerbread dragée
             soufflé fruitcake. Marshmallow jelly jujubes cake cake. Tart
             marshmallow donut tart jelly beans. Dessert marzipan chocolate cake
-            cookie tart.
-            I love gummi bears marzipan. Jujubes
-            apple pie soufflé croissant dessert chupa chups. Croissant toffee
-            candy oat cake powder tootsie roll I love caramels. Candy ice cream
-            lemon drops I love cheesecake chocolate bar wafer I love fruitcake.
+            cookie tart. I love gummi bears marzipan. Jujubes apple pie soufflé
+            croissant dessert chupa chups. Croissant toffee candy oat cake
+            powder tootsie roll I love caramels. Candy ice cream lemon drops I
+            love cheesecake chocolate bar wafer I love fruitcake.
           </p>
         </div>
         <br />
