--- a/pages/about.html
+++ b/pages/about.html
@@ -26,16 +26,16 @@
     <main>
       <section class="sec1">
         <aside class="htext">
-          <h1 class="hmain">This website is awesome</h1>
+          <h1 class="hmain">About us</h1>
           <p class="hsec">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed luctus suscipit felis vitae pretium.
-            In in volutpat tellus. Sed id nulla enim. Integer scelerisque porta mi, vel luctus diam maximus ut.
-            Donec leo lacus, blandit et vehicula accumsan, aliquet sit amet arcu. Integer dictum aliquet nibh,
+            Welcome to Africulinary Delights, your ultimate destination for authentic African pastries crafted with passion and
+            expertise. We take immense pride in curating a delectable assortment of pastries, working hand-in-hand with the
+            world's top chefs who infuse their culinary mastery into each creation. Our commitment to quality and tradition
+            ensures that every bite encapsulates the rich flavors and cultural essence of Africa.
           </p>
-          <a class="btn" href="">Sign up</a>
         </aside>
         <picture>
-          <img src="../images/img1.jpg" alt="Hertzoggies" class="img">
+          <img src="../images/team1.jpg" alt="Three chefs standing in a kitchen" class="head-img" />
         </picture>
       </section>
       <h2 class="main-header">Our Team</h2>
