--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
       </section>
 
       <section class="callToAction">
-        <div>
+        <aside>
           <h1>Call to action! it's time!</h1>
           <p>Sign up for our product by clicking that button right over there!</p>
-        </div>
+        </aside>
         <a id="callToActionBTN" href="">Sign up</a>
       </section>
     </main>
