removed redundant code
checked responsiveness,
removed redundant code on blog

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -40,7 +40,7 @@
         </h1>
       </section>
       <section class="sec2">
-        <div>
+        <div class="part1">
           <h2>Everyone wants A Bite of Africa</h2>
           <p>
             Pie shortbread tart apple pie biscuit apple pie carrot cake pie
@@ -114,8 +114,7 @@
             liquorice croissant pudding.
           </p>
         </div>
-        <br />
-        <div>
+        <div class="part2">
           <h3>A Bite of Africa</h3>
           <div class="blgDiv">
             <figure>
